# jaxbuoy

./: .gitignore  EXPLORATION_GRID_REWARD_TECHNICAL.md  README.md  requirements.txt
configs/: buoy_rudder_ppo.yaml  buoy_rudder_ppo_rnn.yaml  buoy_rudder_ppo_rnn_curiosity.yaml  buoy_rudder_ppo_rnn_curiosity_fast.yaml  buoy_rudder_ppo_rnn_curiosity_stable.yaml  buoy_thruster_ppo.yaml  buoy_thruster_ppo_curiosity_wind_no_rnn_no_time.yaml  buoy_thruster_ppo_rnn_curiosity.yaml  buoy_thruster_ppo_rnn_curiosity_center_obs.yaml  buoy_thruster_ppo_rnn_curiosity_wind.yaml  spiral_params.yaml  unity_imitation.yaml
configs/final/: base.yaml  base_medium_wind.yaml  base_small_wind.yaml  base_strong_wind.yaml
configs/grid_leaders/: collector_leader.yaml
docs/: buoy_training_and_visualization.md
purejaxrl/: buoy_env.py  buoy_models.py  buoy_ppo.py  buoy_ppo_rnn.py  buoy_ppo_rnn_curiosity.py  buoy_wrappers.py  evaluate_buoy.py  grid_search_buoy.py  spiral_policy.py  train_buoy.py  tune_spiral_policy.py  visualize_buoy.py  wrappers.py
ros2_agent_integration/: README.md  export_checkpoint_to_npz.py
ros2_agent_integration/buoy_agent_inference/: package.xml  setup.cfg  setup.py
ros2_agent_integration/buoy_agent_inference/buoy_agent_inference/: inference_node.py  minimal_policy.py
ros2_agent_integration/buoy_agent_inference/config/: inference_params.yaml
ros2_agent_integration/buoy_agent_inference/launch/: inference.launch.py
ros2_agent_integration/model_assets/: wind_entropy_curiosity_high_metadata.json  wind_entropy_curiosity_high_policy.npz
wandb/: latest-run
(+50 files in other folders)
