<?xml version="1.0"?>
<package format="3">
  <name>buoy_agent_inference</name>
  <version>0.1.0</version>
  <description>Minimal NumPy inference node for buoy RNN policy.</description>
  <maintainer email="pedro@example.com">pedro</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
